update P1 and HelloEF

--- a/P1.md
+++ b/P1.md
@@ -6,6 +6,7 @@
 - your projcet must have more than one class
 - your project must build and run, and your code must be pushed to your personal git repo on the cohort organization
 - your project must implement the Repository pattern for data persistance (multiple namespaces, interface)
+- your project must implement SQL Server and Entity Framework Core to provide data persistance.
 
 ## Project Presentation
 - Project presentation will be done on friday 7/26 afternoon
