update and clean up MyAPI

--- a/P1.md
+++ b/P1.md
@@ -1,12 +1,16 @@
 # Our second project, P1 - console application with persistance
 
-## Project Requirements
+## Project Requirements (Minimum Viable Product)
 - your project must be written in C# for .NET
 - your project must be a console app
 - your projcet must have more than one class
 - your project must build and run, and your code must be pushed to your personal git repo on the cohort organization
 - your project must implement the Repository pattern for data persistance (multiple namespaces, interface)
 - your project must implement SQL Server and Entity Framework Core to provide data persistance.
+
+## Stretch Goal
+- build an api to handle the data interaction and persistance for your application. 
+- modify your console app to communicate with your api using http requests
 
 ## Project Presentation
 - Project presentation will be done on friday 7/26 afternoon
