--- a/P2.md
+++ b/P2.md
@@ -26,7 +26,13 @@
 
 ### Frontend
 - Your frontend must be written in "vanilla JavaScript", with HTML5, CSS3, and JavaScript
-- Your frontend must interact with your API for data persistance
+- Your frontend must interact with your API for data persistence
+- Your frontend must use the React library. 
+    - Your frontend must include at least three components, with at least one nested component. (At least one parent-child relationship, and at least one other unrelated component).
+        - Your components should include at least one component that implements `useState`.
+        - Your components should include at least one component with props.
+        - Your components should include at least one component that implements the `Context` hook.
+- Your frontend __may__ be built on the Node.js or Next.js frameworks.
 
 ## Non-Functional Requiremnts
 - Your project team should select a Team Lead to organize the development team efforts
