finish docker-compose.yml with notes for Danilo

--- a/P3.md
+++ b/P3.md
@@ -33,6 +33,10 @@
         - Your components should include at least one component that implements the `Context` hook.
 - Your frontend __may__ be built on the Node.js or Next.js frameworks.
 
+### DevOps
+- For every application architectural component (front end/backend), have a docker image that will allow it to be containerized.
+- Create a docker compose file to expedite local startup
+
 ## Non-Functional Requiremnts
 - Your project team should select a Team Lead to organize the development team efforts
 - Your project should include a Project Description document which details:
